# netmap

./: .gitignore  ARCHITECTURE.md  AUDIT.md  README.md  ROADMAP.md  USER-FLOW.md  __post_20260522.md  index.html  package-lock.json  package.json
deploy/: README.md  netmap-monitor.ps1  netmap-monitor.service  netmap-monitor.sh  netmap-monitor.timer
docs/: README.md  ROADMAP.md  SPEC.md
pyqt6/: main_window.py
python/: build_exe.bat  bump_version.py  netmap_alerts.py  netmap_async.py  netmap_config.py  netmap_db.py  netmap_device.py  netmap_diag.py  netmap_discovery.py  netmap_export.py  netmap_gui.py  netmap_monitor.py  netmap_multicast.py  netmap_scanner.py  netmap_snmp.py  netmap_ssh.py  netmap_tree.py  netmap_utils.py  netmap_web.py  oui_data.py  requirements.txt  test_netmap.py  test_netmap_alerts.py  test_netmap_db.py  test_netmap_export.py  test_netmap_ssh.py  test_netmap_tree.py
python/static/: index.html
release/: installer.nsi
release/NetMap-portable/: README.txt
scripts/: netmap-arp-tcp.ps1  netmap-auto.ps1  netmap-full-scan.ps1  netmap-udp-scan.ps1  netmon.ps1  snmp-discover.ps1  snmp-full.ps1  snmp-ports.ps1  snmp-scan.ps1  snmp-topo.ps1
scripts/dev-scripts/: snmp-dyn.ps1  snmp-fast.ps1  snmp-hex.ps1  snmp-mac.ps1  snmp-ok.ps1  snmp-raw.ps1  snmp-test.ps1  snmp-v2.ps1
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gui.rs  lib.rs  main.rs  scanner.rs  snmp.rs
src/lib/components/: DevicePanel.svelte  NetworkSelector.svelte  StatusBar.svelte  Toolbar.svelte
src/lib/graph/: styles.js
src/lib/icons/: registry.js
